Corregir errores con instancias de variables