@@ -2,6 +2,7 @@ package co.edu.uptc.management.tv.rest;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import javax.ws.rs.Consumes;
 import javax.ws.rs.DELETE;
@@ -15,13 +16,15 @@ import javax.ws.rs.core.MediaType;
 
 import co.edu.uptc.management.enums.EtypeFile;
 import co.edu.uptc.management.persistence.ManagementPersistenceSale;
+import co.edu.uptc.management.persistence.ManagementPersistenceTv;
 import co.edu.uptc.management.tv.dto.SaleDTO;
+import co.edu.uptc.management.tv.dto.TvDTO;
 
 @Path("/ManagementSale")
 public class ManagementSale {
 
 	public static ManagementPersistenceSale managementPersistenceSale = new ManagementPersistenceSale(
-			new ManagementTv());
+			new ManagementPersistenceTv());
 
 	static {
 		managementPersistenceSale.loadFile(EtypeFile.SALE_TXT);
@@ -36,21 +39,30 @@ public class ManagementSale {
 	@Produces({ MediaType.APPLICATION_JSON })
 	public List<SaleDTO> getSales() {
 		return managementPersistenceSale.listAllSales().stream()
-				.map(sale -> new SaleDTO(sale.getIdSale(), sale.getTelevisor().getSerialNumber(), sale.getSaleDate(),
-						sale.getSalePrice(), sale.getPaymentMethod()))
-				.toList();
+				.map(sale -> new SaleDTO(
+						sale.getIdSale(),
+						sale.getTelevisor(), // Esto debería ser un TvDTO
+						sale.getSaleDate(),
+						sale.getSalePrice(),
+						sale.getPaymentMethod()))
+				.collect(Collectors.toList());
 	}
 
 	@GET
 	@Path("/getSaleById")
 	@Produces({ MediaType.APPLICATION_JSON })
 	public SaleDTO getSaleById(@QueryParam("idSale") String idSale) {
-		Sale sale = managementPersistenceSale.getSale(idSale);
+		SaleDTO sale = managementPersistenceSale.getSale(idSale);
 		if (sale != null) {
-			return new SaleDTO(sale.getIdSale(), sale.getTelevisor().getSerialNumber(), sale.getSaleDate(),
-					sale.getSalePrice(), sale.getPaymentMethod());
+			// Usar el constructor de SaleDTO que acepta TvDTO
+			return new SaleDTO(
+					sale.getIdSale(),
+					sale.getTelevisor(), // Esto debería devolver un TvDTO
+					sale.getSaleDate(),
+					sale.getSalePrice(),
+					sale.getPaymentMethod());
 		}
-		return null;
+		return null; // o lanzar una excepción si prefieres
 	}
 
 	@POST
@@ -58,9 +70,9 @@ public class ManagementSale {
 	@Produces({ MediaType.APPLICATION_JSON })
 	@Consumes({ MediaType.APPLICATION_JSON })
 	public SaleDTO createSale(SaleDTO saleDTO) {
-		Tv televisor = managementPersistenceSale.findTvBySerialNumber(saleDTO.getSerialNumber());
+		TvDTO televisor = managementPersistenceSale.findTvBySerialNumber(saleDTO.getTelevisor().getSerialNumber());
 		if (televisor != null) {
-			Sale sale = new Sale(saleDTO.getIdSale(), televisor, saleDTO.getSaleDate(), saleDTO.getSalePrice(),
+			SaleDTO sale = new SaleDTO(saleDTO.getIdSale(), televisor, saleDTO.getSaleDate(), saleDTO.getSalePrice(),
 					saleDTO.getPaymentMethod());
 			if (managementPersistenceSale.insertSale(sale)) {
 				managementPersistenceSale.synchronizeAllFiles(); // Sincroniza todos los formatos
@@ -75,9 +87,9 @@ public class ManagementSale {
 	@Produces({ MediaType.APPLICATION_JSON })
 	@Consumes({ MediaType.APPLICATION_JSON })
 	public SaleDTO updateSale(SaleDTO saleDTO) {
-		Sale existingSale = managementPersistenceSale.getSale(saleDTO.getIdSale());
+		SaleDTO existingSale = managementPersistenceSale.getSale(saleDTO.getIdSale());
 		if (existingSale != null) {
-			Tv televisor = managementPersistenceSale.findTvBySerialNumber(saleDTO.getSerialNumber());
+			TvDTO televisor = managementPersistenceSale.findTvBySerialNumber(saleDTO.getTelevisor().getSerialNumber());
 			if (televisor != null) {
 				existingSale.setTelevisor(televisor);
 				existingSale.setSaleDate(saleDTO.getSaleDate());
@@ -95,10 +107,11 @@ public class ManagementSale {
 	@Produces({ MediaType.APPLICATION_JSON })
 	@Consumes({ MediaType.APPLICATION_JSON })
 	public SaleDTO updateSaleAttribute(SaleDTO saleDTO) {
-		Sale existingSale = managementPersistenceSale.getSale(saleDTO.getIdSale());
+		SaleDTO existingSale = managementPersistenceSale.getSale(saleDTO.getIdSale());
 		if (existingSale != null) {
-			if (!Objects.isNull(saleDTO.getSerialNumber())) {
-				Tv televisor = managementPersistenceSale.findTvBySerialNumber(saleDTO.getSerialNumber());
+			if (!Objects.isNull(saleDTO.getTelevisor().getSerialNumber())) {
+				TvDTO televisor = managementPersistenceSale
+						.findTvBySerialNumber(saleDTO.getTelevisor().getSerialNumber());
 				if (televisor != null) {
 					existingSale.setTelevisor(televisor);
 				}
@@ -122,14 +135,16 @@ public class ManagementSale {
 	@Path("/deleteSale")
 	@Produces({ MediaType.APPLICATION_JSON })
 	public SaleDTO deleteSale(@QueryParam("idSale") String idSale) {
-		Sale sale = managementPersistenceSale.getSale(idSale);
+		SaleDTO sale = managementPersistenceSale.getSale(idSale);
 		if (sale != null) {
 			if (managementPersistenceSale.deleteSale(idSale)) {
 				managementPersistenceSale.synchronizeAllFiles(); // Sincroniza todos los formatos
-				return new SaleDTO(sale.getIdSale(), sale.getTelevisor().getSerialNumber(), sale.getSaleDate(),
+				// Usa el constructor que acepta TvDTO
+				return new SaleDTO(sale.getIdSale(), sale.getTelevisor(), sale.getSaleDate(),
 						sale.getSalePrice(), sale.getPaymentMethod());
 			}
 		}
 		return null;
 	}
+
 }
